--- a/docs/jamesdocs.tex
+++ b/docs/jamesdocs.tex
@@ -36,7 +36,7 @@
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \IfFileExists{bookmark.sty}{\usepackage{bookmark}}{\usepackage{hyperref}}
 \hypersetup{
-  pdftitle={JAMES internals},
+  pdftitle={JAMES Documentation},
   pdfauthor={Stef van Buuren},
   hidelinks,
   pdfcreator={LaTeX via pandoc}}
@@ -115,7 +115,7 @@
 \usepackage[]{natbib}
 \bibliographystyle{apalike}
 
-\title{JAMES internals}
+\title{JAMES Documentation}
 \author{Stef van Buuren}
 \date{2021-06-02}
 
@@ -130,7 +130,15 @@
 \chapter*{Preface}\label{preface}}
 \addcontentsline{toc}{chapter}{Preface}
 
-This document contains minimal documentation of JAMES internals.
+Hi, welcome to JAMES!
+
+This document contains documentation of the Joint Automatic Measurement and Evaluation System (JAMES). JAMES is fully programmed in \texttt{R} and makes it functionality available as an API running under \texttt{OpenCPU}.
+
+This contents of the file is fully in the works. It is it neither complete nor garanteed to be accurate, consider it as a journey guide for your travel through JAMES. Nevertheless, I hope that it will help to understand basic ideas, technologies and applications.
+
+Last version: June 2021.
+
+Written by Stef van Buuren
 
 \hypertarget{intro}{%
 \chapter{Introduction}\label{intro}}
@@ -228,7 +236,7 @@ Package & Open & Description \\
 \href{https://github.com/growthcharts/jamesdemo}{\texttt{jamesdemo}} & Y & App to interact with the JAMES chart site \\
 \href{https://github.com/stefvanbuuren/minihealth}{\texttt{minihealth}} & Y & Mini Dossier for Individual Health Data \\
 \href{https://github.com/stefvanbuuren/clopus}{\texttt{clopus}} & N & Growth reference library \\
-\href{https://github.com/stefvanbuuren/jamesdocs}{\texttt{jamesdocs}} & Y & JAMES internals \\
+\href{https://github.com/stefvanbuuren/jamesdocs}{\texttt{jamesdocs}} & Y & JAMES Documentation \\
 \bottomrule
 \end{longtable}
 
