--- a/docs/jamesdocs.tex
+++ b/docs/jamesdocs.tex
@@ -816,7 +816,7 @@ A lot can go wrong. Please be patient to check each step.
 \CommentTok{\# check on https://tnochildhealthstatistics.shinyapps.io/james\_tryout/ }
 
 \CommentTok{\# clean up: delete \textasciitilde{}/conf/ after everything works}
-\FunctionTok{rm} \AttributeTok{{-}rf}\NormalTok{ /conf}
+\FunctionTok{rm} \AttributeTok{{-}rf}\NormalTok{ conf}
 \end{Highlighting}
 \end{Shaded}
 
