--- a/docs/jamesdocs.tex
+++ b/docs/jamesdocs.tex
@@ -37,7 +37,7 @@
 \IfFileExists{bookmark.sty}{\usepackage{bookmark}}{\usepackage{hyperref}}
 \hypersetup{
   pdftitle={JAMES Documentation},
-  pdfauthor={Stef van Buuren},
+  pdfauthor={Stef van Buuren, Arjan Huizing},
   hidelinks,
   pdfcreator={LaTeX via pandoc}}
 \urlstyle{same} % disable monospaced font for URLs
@@ -116,7 +116,7 @@
 \bibliographystyle{apalike}
 
 \title{JAMES Documentation}
-\author{Stef van Buuren}
+\author{Stef van Buuren, Arjan Huizing}
 \date{2021-06-02}
 
 \begin{document}
@@ -137,8 +137,6 @@ This document contains documentation of the Joint Automatic Measurement and Eval
 This contents of the file is fully in the works. It is it neither complete nor garanteed to be accurate, consider it as a journey guide for your travel through JAMES. Nevertheless, I hope that it will help to understand basic ideas, technologies and applications.
 
 Last version: June 2021.
-
-Written by Stef van Buuren
 
 \hypertarget{intro}{%
 \chapter{Introduction}\label{intro}}
